# announcement-templates

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  ecosystem.yaml  pyproject.toml  seed.yaml
.github/workflows/: ci.yml
data/: template-registry.json
kerygma_templates/: __init__.py  __main__.py  cli.py  data_export.py  engine.py  quality_checker.py  registry_loader.py
templates/community/: community-milestone.md  contribution-merged.md  reading-group.md  salon-invite.md  workshop-sprint.md
templates/essay/: essay-announce.md  essay-highlight.md  essay-series.md  weekly-digest.md
templates/institutional/: grant-supplement.md  partnership.md  press-release.md
templates/launch/: organ-launch.md  repo-launch.md  system-milestone.md
templates/release/: breaking-change.md  bugfix-release.md  feature-release.md
tests/: test_cli.py  test_data_export.py  test_engine.py  test_quality_checker.py  test_registry_loader.py  test_templates_valid.py
tests/fixtures/: sample_event.json  sample_registry.json
